# deep-learning-cookbook

./: .gitignore  README.md  pyproject.toml
1. Convolutional Networks (CNNs)/: 1.1. What are convolutions?.ipynb  1.2. Pytorch Conv1d and Conv2d.ipynb  1_mnist_classifier.py  modules.py
3. Transformers/3.1. BERT/: README.md  data.py  models.py
dlc/: utils.py
dlc/cnn/: __init__.py  modules.py
dlc/diffusion/: __init__.py  ddpm.py
dlc/losses/: __init__.py
dlc/transformers/: __init__.py  modules.py
tests/: conftest.py  test_transformers.py
