# >>> Poetry Configuration START
[tool.poetry]
name = "deep-learning-cookbook"
version = "0.1.0"
description = "A cookbook and guide on deep learning techniques in Pytorch."
authors = ["Adnan Siddiquei"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "dlc" }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
pytorch-lightning = "^2.4.0"
datasets = "^3.0.1"
jupyter = "^1.1.1"
pillow = "^11.0.0"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# <<< Poetry Configuration END

# >>> Ruff Configuration START
[tool.ruff]
# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of the pycodestyle (`E`) codes, pycodestyle warnings (`W`).
# This will mimic the default flake8 configuration for linting.
select = ["E4", "E7", "E9", "F", "W"]
ignore = ["E741"]

[tool.ruff.lint.extend-per-file-ignores]
# Ignore unused-imports in __init__.py files.
"**/__init__.py" = ["F401"]
"report/figures/*" = ["ALL"]

[tool.ruff.format]
# Override the default setting, which is "double".
quote-style = "single"
# <<< Ruff Configuration END